--- a/Esercizio3/MainWindow.xaml
+++ b/Esercizio3/MainWindow.xaml
@@ -5,8 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Esercizio3"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MainWindow" Height="366" Width="624">
+    <Grid Background="#FFDEDEDE">
+        <Label VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="Importo:" HorizontalAlignment="Left" Margin="95,60,0,0" VerticalAlignment="Top" Width="130" FontSize="16" Background="White"/>
+        <Label VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="Sconto:" HorizontalAlignment="Left" Margin="95,105,0,0" VerticalAlignment="Top" Width="95" FontSize="16" Background="White"/>
+        <Label VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="IVA:" HorizontalAlignment="Left" Margin="95,150,0,0" VerticalAlignment="Top" Width="95" FontSize="16" Background="White"/>
+        <Label VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="Totale Lordo:" HorizontalAlignment="Left" Margin="95,195,0,0" VerticalAlignment="Top" Width="130" FontSize="16" Background="White"/>
+        <TextBox Name="txtImporto" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="31" Margin="340,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="185" FontSize="16"/>
+        <TextBox Name="txtSconto" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="31" Margin="240,105,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="70" FontSize="16" />
+        <TextBox Name="txtIVA" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="31" Margin="240,150,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="70" FontSize="16"/>
+        <TextBox Name="txtLordo" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="31" Margin="340,195,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="185" FontSize="16"/>
+        <Button Name="btnCalcola" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="Calcola" HorizontalAlignment="Left" Margin="340,255,0,0" VerticalAlignment="Top" Width="185" Height="55" FontSize="24" FontWeight="Bold" FontFamily="Showcard Gothic" Foreground="White" Background="Black" Click="btnCalcola_Click"/>
+        <Label Name="lblSconto" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="" HorizontalAlignment="Left" Margin="340,105,0,0" VerticalAlignment="Top" Width="185" Height="31" Background="#FFBBBBBB"/>
+        <Label Name="lblIVA" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="" HorizontalAlignment="Left" Margin="340,150,0,0" VerticalAlignment="Top" Width="185" Height="31" Background="#FFBBBBBB"/>
     </Grid>
 </Window>
